Fix overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@ body {
     color: white;
     font-family:"ArchitectsDaughter-Regular";;
     font-size: 25px;
-    overflow-x: hidden;
 } 
+
+body, html {
+    overflow-x: hidden;
+}
 
 .overlay {
     position: absolute;
